testdata/golden/sema/invalid/ownership/own_to_plain_noncopy.fmt
// Non-Copy types cannot implicitly drop ownership.

fn main() {
    let s: own string = own "hi";
    let t: string = s;
}
